--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@sanity/client": "^2.23.2",
+    "framer-motion": "^6.2.3",
     "next": "latest",
     "next-sanity": "^0.4.0",
     "react": "^17.0.2",
